# my_screen

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: autotests.yml
client/include/: Client.h
client/src/: Client.cpp  Client.h  ClientLogic.cpp  ClientLogic.h  main.cpp
common/: Common.cpp  Common.h
common/include/: Common.h
common/src/: Common.cpp
server/include/: Server.h  ServerLogic.h  Session.h  SessionLogic.h
server/src/: Server.cpp  ServerLogic.cpp  Session.cpp  SessionLogic.cpp  main.cpp
src/: Server.cpp  Server.h  ServerLogic.cpp  ServerLogic.h  main.cpp
tests/: test.py
